--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all contributors to the repository.
 
 Seunda Ludivin <ludivinseunsa0@gmail.com>
+Hammed Aisha <folushooyinkansola@gmail.com>
